--- a/style.css
+++ b/style.css
@@ -1,3 +1,63 @@
+.headeruno{                     /*Color, tamaño y fuente al header principal*/
+
+    background-color: #7fadcd;
+    font-family: sans-serif;
+    text-transform: uppercase;
+
+    width: 100%;
+    height: 30vh;
+
+    
+}
+
+.navuno{                        /*Color, tamaño y fuente al nav principal*/
+    font-weight: 400;
+    text-transform: none;
+    list-style: none;
+
+
+}
+
+.mainuno{                       /*Color, tamaño y fuente al main principal*/
+    
+    background-color: #7fadcd;
+    font-family: sans-serif;
+    width: 100%;
+    height: 25vh;
+    
+}
+
+
+
+.imagen{
+    float: left;
+    margin-right: 2vh;
+}
+
+.footeruno{                     /*Color, tamaño y fuente al footer principal*/
+    background-color: #7fadcd;
+    font-family: sans-serif;
+    text-align: justify;
+
+    width: 100%;
+    height: 5vh;
+
+}
+
+
+.formuno{                       /*Diseño de los bordes, color, fuente y tamaño de la separación*/
+   border: solid 2px;
+   border-color: #7fadcd;
+   background-color: #7fadcd;
+   width: 60vh;
+   height: 70vh;
+   font-family: sans-serif;
+   padding-left: 20px;
+   padding-top: 20px;
+   padding-bottom: 40px;
+
+}
+
 #titulo{
     color: navy;
     
@@ -16,45 +76,4 @@ table{                           /*Color de la tabla*/
 
 .finde{                         /*Color de los fines de semana*/
     color: darkgreen;
-}
-
-.headeruno{                     /*Color, tamaño y fuente al header principal*/
-
-    background-color: #7fadcd;
-    width: 100%;
-    height: 30vh;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    
-}
-
-.navuno{                        /*Color, tamaño y fuente al nav principal*/
-    font-weight: 400;
-    text-transform: none;
-    list-style: none;
-}
-
-.mainuno{                       /*Color, tamaño y fuente al main principal*/
-    font-family: sans-serif;
-}
-
-.footeruno{                     /*Color, tamaño y fuente al footer principal*/
-    background-color: #7fadcd;
-    width: 100%;
-    height: 5vh;
-    font-family: sans-serif;
-    text-align: justify;
-}
-
-.formuno{                       /*Diseño de los bordes, color, fuente y tamaño de la separación*/
-   border: solid 2px;
-   border-color: #7fadcd;
-   background-color: #7fadcd;
-   width: 60vh;
-   height: 70vh;
-   font-family: sans-serif;
-   padding-left: 20px;
-   padding-top: 20px;
-   padding-bottom: 40px;
-
 }
