--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 .headeruno{                     /*Color, tamaño y fuente al header principal*/
 
     background-color: #7fadcd;
@@ -5,7 +10,8 @@
     text-transform: uppercase;
 
     width: 100%;
-    height: 30vh;
+    height: 20vh;
+    padding-left: 10px;
 
     
 }
@@ -14,6 +20,13 @@
     font-weight: 400;
     text-transform: none;
     list-style: none;
+    margin-top: 20px;
+    padding-left: 10px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 
 
 }
@@ -22,16 +35,22 @@
     
     background-color: #7fadcd;
     font-family: sans-serif;
-    width: 100%;
+    
+   
+    width: 95%;
     height: 25vh;
+    margin: 20px;
+    padding-left: 10px;
+    
+    
     
 }
 
-
-
-.imagen{
+.asideuno{
     float: left;
     margin-right: 2vh;
+    margin-top: 45px;
+    
 }
 
 .footeruno{                     /*Color, tamaño y fuente al footer principal*/
@@ -41,9 +60,10 @@
 
     width: 100%;
     height: 5vh;
+    margin-top: 60px;
+    padding-left: 5px;
 
 }
-
 
 .formuno{                       /*Diseño de los bordes, color, fuente y tamaño de la separación*/
    border: solid 2px;
