--- a/style.css
+++ b/style.css
@@ -59,9 +59,21 @@
     text-align: justify;
 
     width: 100%;
-    height: 5vh;
+    height: 15vh;
     margin-top: 60px;
     padding-left: 5px;
+    padding-top: 10px;
+
+}
+
+.navdos{
+    margin-bottom: 60px;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
 
 }
 
