--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
     padding: 0px;
 }
 
+.contenedor{
+    display: grid;
+    grid-template-areas: "header header header"
+                         "alta alta alta"
+                         "aside main main"
+                         "baja baja baja"
+                         "footer footer footer";
+}
+
 .headeruno{                     /*Color, tamaño y fuente al header principal*/
 
     background-color: #7fadcd;
@@ -12,7 +21,7 @@
     width: 100%;
     height: 20vh;
     padding-left: 10px;
-
+    grid-area: header;
     
 }
 
@@ -23,6 +32,7 @@
     margin-top: 20px;
     padding-left: 10px;
 
+
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -31,26 +41,46 @@
 
 }
 
+.barra-alta{
+    background-color: navy;
+    width: 100%;
+    height: 3vh;
+    grid-area: alta;
+}
+
+
+
 .mainuno{                       /*Color, tamaño y fuente al main principal*/
     
     background-color: #7fadcd;
     font-family: sans-serif;
     
    
-    width: 95%;
-    height: 25vh;
-    margin: 20px;
+    width: 100%;
+    height: 30vh;
+   
     padding-left: 10px;
-    
+    grid-area: main;
     
     
 }
 
-.asideuno{
-    float: left;
-    margin-right: 2vh;
-    margin-top: 45px;
+.section{
+    padding: 20px;
+}
+
+.aside-uno{
+    width: 20%;
+    grid-area: aside;
     
+    
+}
+
+.barra-baja{
+    background-color: navy;
+    width: 100%;
+    height: 3vh;
+    grid-area: baja;
 }
 
 .footeruno{                     /*Color, tamaño y fuente al footer principal*/
@@ -60,9 +90,10 @@
 
     width: 100%;
     height: 15vh;
-    margin-top: 60px;
     padding-left: 5px;
     padding-top: 10px;
+
+    grid-area: footer;
 
 }
 
@@ -81,14 +112,16 @@
    border: solid 2px;
    border-color: #7fadcd;
    background-color: #7fadcd;
-   width: 60vh;
-   height: 70vh;
+   width: 70vh;
+   height: 100vh;
    font-family: sans-serif;
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 40px;
 
 }
+
+
 
 #titulo{
     color: navy;
@@ -109,3 +142,12 @@ table{                           /*Color de la tabla*/
 .finde{                         /*Color de los fines de semana*/
     color: darkgreen;
 }
+
+.tablas{
+    font-family: sans-serif;
+}
+
+.horarios{
+    width: 40%;
+}
+
